hall of fame sorting

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -43,6 +43,22 @@ th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #04AA6D;
+  background-color: #ff9d00;
   color: white;
+}
+
+th:hover { background-color: #ba7300 }
+
+table.sortable tbody {
+    counter-reset: sortabletablescope;
+}
+table.sortable thead tr::before {
+    content: "";
+    display: table-cell;
+    background-color: #ff9d00;
+}
+table.sortable tbody tr::before {
+    content: counter(sortabletablescope);
+    counter-increment: sortabletablescope;
+    display: table-cell;
 }
