--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
         {% block script %}
         {% endblock %}
         <link rel="stylesheet" href="/static/css/styles.css" />
+        <script src="/static/js/sorttable.js"></script>
     </head>
     <body>
         <div id="main_menu">
