--- a/templates/tournament_list.html
+++ b/templates/tournament_list.html
@@ -30,7 +30,7 @@
     {% endfor %}
     </table>
 
-    <table>
+    <table class="sortable">
         <tr>
             <th>Player</th>
             {% for row in tour_list %}
@@ -48,6 +48,7 @@
           {% for tour in tour_list %}
             <td>{{ pl[1][tour[0]] }}</td>
           {% endfor %}
+            <td>{{ pl[2] }}</td>
         </tr>
     {% endfor %}
     </table>
