hall of fame chart of all points

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -52,7 +52,7 @@ th:hover { background-color: #ba7300 }
 table.sortable tbody {
     counter-reset: sortabletablescope;
 }
-table.sortable thead tr::before {
+table.sortable thead tr::before {s
     content: "";
     display: table-cell;
     background-color: #ff9d00;
