added joker stats and bonus in player lists

--- a/templates/tournament_list.html
+++ b/templates/tournament_list.html
@@ -44,6 +44,9 @@
             <th>Winners</th>
             <th>Goals</th>
             <th>Results</th>
+            <th>Joker points</th>
+            <th>Joker hit</th>
+            <th>Bonus points</th>
         </tr>
     {% for pl in player %}
         <tr>
@@ -56,6 +59,9 @@
             <td>{{ pl[4] }}</td>
             <td>{{ pl[5] }}</td>
             <td>{{ pl[6] }}</td>
+            <td>{{ pl[7] }}</td>
+            <td>{{ pl[8] }}</td>
+            <td>{{ pl[9] }}</td>
         </tr>
     {% endfor %}
     </table>
